--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -5,7 +5,10 @@
     <title>Login</title>
 </head>
 <body>
-  <form action="/login" method="post">
+<!--обозначаем форму, которую надо обработать и вставить csrf-токен-->
+  <form th:action="@{/login}" method="post">
+<!--      <input type="hidden" th:name="${_csrf.parameterName}"-->
+<!--      th:value="${_csrf.token}">-->
       <div style="color: red" th:if="${param.error}">
           Bad credentials
       </div>
